--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				
 		  <!--logo start-->
 			<div class="logo">
-				<a href="#"><img src="images\logo.jpg" alt="quick"></a>
+				<a href="index.html"><img src="images\logo.jpg" alt="quick"></a>
 			</div>
 		 <!--logo end-->
 
