--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset = "UTF-8">
 	<meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
-	<link rel="stylesheet" type="text/css" href="css\style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>quick</title>
 </head>
 
@@ -19,7 +19,7 @@
 				
 		  <!--logo start-->
 			<div class="logo">
-				<a href="index.html"><img src="images\logo.jpg" alt="quick"></a>
+				<a href="index.html"><img src="images/logo.jpg" alt="quick"></a>
 			</div>
 		 <!--logo end-->
 
@@ -51,26 +51,26 @@
 	<h4 class="tagline_2 navy">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et<br>dolore magna aliqua. Ut enim ad minim veniam.</h4>
 	
 	<div class="image2">
-		<img src="images\banner.jpg" alt="banner">
+		<img src="images/banner.jpg" alt="banner">
 	</div>
 
 	<div class="container">
 
 		<div class="box_1">
-			
-				<h1 class="content red">3k+</h1>
-				<h4 class="content navy">Excepteur sint occaecat cupidatat non proident,<br>sunt in culpa qui officia deserunt mollit anim id<br>est laborum.</h4>
-			
+			<h1 class="content red">3k+</h1>
+			<h4 class="content navy">Excepteur sint occaecat cupidatat non proident,<br>sunt in culpa qui officia deserunt mollit anim id<br>est laborum.</h4>
 		</div>
 
 		<div class="box_2">
-			
-				<h1 class="navy">Successfully<br>completed<br>projects & ideas</h1>
+			<h1 class="navy">Successfully<br>completed<br>projects & ideas</h1>
 	    </div>
-	</div>
 
 	</div>
+
 </div>
+
+
+
 
 <!--banner end-->
 
@@ -83,19 +83,19 @@
 	<div class="box">
 
 		<div class="blog first">
-			<img src="images\blog1.jpg" alt="blog1">
+			<img src="images/blog1.jpg" alt="blog1">
 			<h2>Unleash your creativity</h2>
 			<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cilium dolore eu fugiat nulla pariatur.</p>
 		</div>
 	
 		<div class="blog second">
-			<img src="images\blog2.jpg" alt="blog2">
+			<img src="images/blog2.jpg" alt="blog2">
 			<h2>Unleash your creativity</h2>
 			<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cilium dolore eu fugiat nulla pariatur.</p>
 		</div>
 
 		<div class="blog third">
-			<img src="images\blog3.jpg" alt="blog3">
+			<img src="images/blog3.jpg" alt="blog3">
 			<h2>Unleash your creativity</h2>
 			<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cilium dolore eu fugiat nulla pariatur.</p>
 		</div>
